# DarkPrompt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
darkprompt/: adapter.py  cli.py  evaluator.py  judge.py  models.py  mutator.py  redactor.py  reporter.py  runner.py
darkprompt/adapters/: anthropic.py  common.py  exploitrank.py  gemini.py  huggingface.py  mistral.py  ollama.py  openai.py
docs/: assertions.md
sample_pack/: pack.yaml
sample_pack/cases/: injection.yaml  injection_v2.yaml  injection_v3.yaml  multiturn.yaml
security_pack_v1/: pack.yaml
security_pack_v1/cases/: injection.yaml
tests/: test_adapters.py  test_cli.py  test_core.py  test_evaluator_v2.py  test_exploitrank.py  test_judge.py  test_main.py
