[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "darkprompt"
version = "1.0.1"
description = "A comprehensive AI adversarial toolkit for model-agnostic security auditing, featuring systematic mutation sensitivity analysis, multi-turn stateful attacks, and ExploitRank intelligence integration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "typer[all]",
    "rich",
    "python-dotenv",
    "pydantic>=2.12.5",
    "pyyaml",
    "openai",
    "httpx",
]

[project.optional-dependencies]
media = [
    "pillow>=11.3.0",
]

[project.scripts]
darkprompt = "darkprompt.cli:app"
aat = "darkprompt.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["darkprompt*"]
