[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "darkprompt"
dynamic = ["version"]
description = "Repeatable adversarial security testing for large language model providers."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
authors = [
  { name = "Jason O'Neal" },
]
keywords = [
  "llm-security",
  "prompt-injection",
  "adversarial-testing",
  "ai-security",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "httpx>=0.27,<1",
  "jsonschema>=4.22,<5",
  "openai>=1.30,<3",
  "pydantic>=2.7,<3",
  "python-dotenv>=1,<2",
  "pyyaml>=6,<7",
  "rich>=13,<16",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
media = [
  "pillow>=10,<13",
]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
darkprompt = "darkprompt.cli:app"
aat = "darkprompt.cli:app"

[project.urls]
Homepage = "https://github.com/jason-allen-oneal/DarkPrompt"
Issues = "https://github.com/jason-allen-oneal/DarkPrompt/issues"
Source = "https://github.com/jason-allen-oneal/DarkPrompt"
Security = "https://github.com/jason-allen-oneal/DarkPrompt/security/policy"

[tool.setuptools.dynamic]
version = { attr = "darkprompt.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["darkprompt*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["darkprompt"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
